Changes needed to preview in Mirror Sandbox

--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,16 @@ allprojects {
     repositories {
         mavenCentral()
     }
+    tasks.withType(Exec) {
+        doFirst {
+            println commandLine
+        }
+    }
 }
 
 ext {
     compileSdkVersion = 21
     buildToolsVersion = '21.1.2'
-    minSdkVersion = 14
+    minSdkVersion = 15
     targetSdkVersion = 21
 }
