--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,9 @@ dependencies {
     compile 'com.android.support:support-annotations:21.0.3'
     compile "com.android.support:appcompat-v7:21.0.3"
 
-    compile 'com.google.dagger:dagger:2.0-SNAPSHOT'
-    apt 'com.google.dagger:dagger-compiler:2.0-SNAPSHOT'
-    provided 'com.google.dagger:dagger-compiler:2.0-SNAPSHOT'
+    compile 'com.google.dagger:dagger:2.2'
+    apt 'com.google.dagger:dagger-compiler:2.2'
+    provided 'com.google.dagger:dagger-compiler:2.2'
     provided 'org.glassfish:javax.annotation:10.0-b28'
 
     compile 'com.squareup.okhttp:okhttp:2.2.0'
